--- a/p8105_hw5_jl6648.md
+++ b/p8105_hw5_jl6648.md
@@ -1,11 +1,9 @@
----
-title: "p8105_hw5_jl6648"
-output: github_document
-author: Jixin Li
-date: "2023-11-07"
----
+p8105_hw5_jl6648
+================
+Jixin Li
+2023-11-07
 
-```{r, message=FALSE}
+``` r
 library(tidyverse)
 library(patchwork)
 
@@ -28,18 +26,19 @@ scale_fill_discrete = scale_fill_viridis_d
 
 # problem 1
 
-
 # problem 2
 
 ## Start with a dataframe containing all file names
-```{r}
+
+``` r
 files_df <- tibble(
   files = list.files("data")) |>
   mutate(files = str_c("data", files, sep = "/"))
 ```
 
 ## Iterate over file names and read in data for each subject and tidy the result
-```{r, message=FALSE}
+
+``` r
 study_df <- files_df |>
   mutate(respondents = map(files, read_csv)) |>
   mutate(arm_type = case_when(str_detect(files, "exp") ~ "experiment",
@@ -53,7 +52,8 @@ study_df <- files_df |>
 ```
 
 ## Make a spaghetti plot showing observations on each subject over time
-```{r}
+
+``` r
 study_df |>
   ggplot(aes(x = week, y = observations, color = subject_id)) +
   geom_line() +
@@ -65,4 +65,12 @@ study_df |>
   )
 ```
 
-the trend of observations between control and experimental group is different. In the control group, the observation of each subject fluctuate during 8 weeks, but finally back to the observation level of week 1 and there no specific trend occur during 8 weeks. In the experimental group, there is a increase trend of observation on each subject during 8 weeks. At the end of week 8, the observation of each subject is much higher than the observation of week 1. 
+<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-4-1.png" width="95%" />
+
+the trend of observations between control and experimental group is
+different. In the control group, the observation of each subject
+fluctuate during 8 weeks, but finally back to the observation level of
+week 1 and there no specific trend occur during 8 weeks. In the
+experimental group, there is a increase trend of observation on each
+subject during 8 weeks. At the end of week 8, the observation of each
+subject is much higher than the observation of week 1.
