--- a/p8105_hw5_jl6648.Rmd
+++ b/p8105_hw5_jl6648.Rmd
@@ -66,3 +66,41 @@ study_df |>
 ```
 
 the trend of observations between control and experimental group is different. In the control group, the observation of each subject fluctuate during 8 weeks, but finally back to the observation level of week 1 and there no specific trend occur during 8 weeks. In the experimental group, there is a increase trend of observation on each subject during 8 weeks. At the end of week 8, the observation of each subject is much higher than the observation of week 1. 
+
+# problem 3
+
+## conduct a function and hypothesis test
+```{r}
+set.seed(1)
+
+sim_normal = function(n = 30, mu, sigma = 5){
+  x = rnorm(n, mean = mu, sd = sigma)
+  test = t.test(x, mu = 0, alternative = "two.sided", conf.level = 0.95) |>
+    broom::tidy() |>
+    select(estimate, p.value)
+}
+```
+
+## Set μ=0 and generate 5000 datasets from the model
+```{r}
+sim_0 = vector("list", length = 5000)
+
+for (i in 1:5000) {
+  sim_0[[i]] = sim_normal(mu = 0)
+}
+
+sim_0_results = bind_rows(sim_0)
+```
+
+## Repeat the above for μ={1,2,3,4,5,6}
+```{r}
+sim_mu = 
+  tibble(
+    mu = c(1, 2, 3, 4, 5, 6)
+    ) |>
+  mutate(outputs = map(mu, ~rerun(5000, sim_normal(mu=mu))),
+         estimate = map(outputs, bind_rows)) |>
+  unnest(estimate) |>
+  select(-outputs)
+```
+
