--- a/p8105_hw5_jl6648.md
+++ b/p8105_hw5_jl6648.md
@@ -74,3 +74,89 @@ week 1 and there no specific trend occur during 8 weeks. In the
 experimental group, there is a increase trend of observation on each
 subject during 8 weeks. At the end of week 8, the observation of each
 subject is much higher than the observation of week 1.
+
+# problem 3
+
+## conduct a function and hypothesis test
+
+``` r
+set.seed(327)
+
+sim_normal <- function(n = 30, mu, sigma = 5){
+  x = rnorm(n, mean = mu, sd = sigma)
+  test <- t.test(x = x, alternative = "two.sided", conf.level = 0.95) |>
+    broom::tidy() |>
+    select(estimate, p.value)
+}
+```
+
+## Set μ=0 and generate 5000 datasets from the model
+
+``` r
+sim_mu_0 <- rerun(5000, sim_normal(mu = 0)) |>
+  bind_rows()
+```
+
+    ## Warning: `rerun()` was deprecated in purrr 1.0.0.
+    ## ℹ Please use `map()` instead.
+    ##   # Previously
+    ##   rerun(5000, sim_normal(mu = 0))
+    ## 
+    ##   # Now
+    ##   map(1:5000, ~ sim_normal(mu = 0))
+    ## This warning is displayed once every 8 hours.
+    ## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
+    ## generated.
+
+## Repeat the above for μ={1,2,3,4,5,6}
+
+``` r
+sim_mu = 
+  tibble(
+    mu = c(1, 2, 3, 4, 5, 6)
+    ) |>
+  mutate(outputs = map(.x = mu, ~ rerun(5000, sim_normal(30, mu = .x))),
+         estimate = map(outputs, bind_rows)) |>
+  unnest(estimate) |>
+  select(-outputs)
+```
+
+    ## Warning: There was 1 warning in `mutate()`.
+    ## ℹ In argument: `outputs = map(.x = mu, ~rerun(5000, sim_normal(30, mu = .x)))`.
+    ## Caused by warning:
+    ## ! `rerun()` was deprecated in purrr 1.0.0.
+    ## ℹ Please use `map()` instead.
+    ##   # Previously
+    ##   rerun(5000, sim_normal(30, mu = .x))
+    ## 
+    ##   # Now
+    ##   map(1:5000, ~ sim_normal(30, mu = .x))
+
+## Make a plot showing the proportion of times the null was rejected on the y axis and the true value of μ on the x axis
+
+``` r
+  sim_mu |>
+  group_by(mu) |>
+  summarize(p_value = sum(p.value < 0.05), 
+            number = n(), 
+            reject_prop = p_value/number) |>
+  ggplot(aes(x = mu, y = reject_prop)) + 
+  geom_point() + 
+  geom_smooth() +
+  labs(
+    title = "Proportion of rejecting null hypothesis on each mu",
+    x = "True Value mu", 
+    y = "Proportion"
+  )
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
+
+    ## Warning in max(ids, na.rm = TRUE): no non-missing arguments to max; returning
+    ## -Inf
+
+<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-8-1.png" width="95%" />
+
+As mu increase from 1 to 6, the proportion of rejection null hypothesis
+increases. There is a positive correlation between power and effect
+size.
