make two plots, finish the problem 3

--- a/p8105_hw5_jl6648.md
+++ b/p8105_hw5_jl6648.md
@@ -160,3 +160,62 @@ sim_mu =
 As mu increase from 1 to 6, the proportion of rejection null hypothesis
 increases. There is a positive correlation between power and effect
 size.
+
+## Make a plot showing the average estimate of μ̂ on the y axis and the true value of μ on the x axis.
+
+``` r
+sim_mu |>
+  group_by(mu) |>
+  summarize(ave_estimate = mean(estimate)) |>
+  ggplot(aes(x = mu, y = ave_estimate)) + 
+  geom_point() +
+  geom_line() + 
+  geom_smooth() +
+  labs(
+    title = "Average estimate of mu of each true value mu",
+    x = "True value mu", 
+    y = "Average estimate "
+  )
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
+
+    ## Warning in max(ids, na.rm = TRUE): no non-missing arguments to max; returning
+    ## -Inf
+
+<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-9-1.png" width="95%" />
+
+## Make a plot showing the average estimate of μ̂ only in samples for which the null was rejected on the y axis and the true value of μ on the x axis.
+
+``` r
+sim_mu |>
+  group_by(mu) |>
+  filter(p.value < 0.05) |>
+  summarize(ave_estimate = mean(estimate)) |>
+  ggplot(aes(x = mu, y = ave_estimate)) + 
+  geom_point() +
+  geom_line() + 
+  geom_smooth() +
+  labs(
+    title = "Average estimate of mu of each true value mu in samples of rejecting the null",
+    x = "True value mu", 
+    y = "Average estimate "
+  )
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
+
+    ## Warning in max(ids, na.rm = TRUE): no non-missing arguments to max; returning
+    ## -Inf
+
+<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-10-1.png" width="95%" />
+
+according to these two plots, as the true value mu increase, the sample
+average of μ̂ across tests for which the null is rejected is more likely
+to equal to the average estimate for true value of μ. From the plots, we
+can tell at the mu equal to 4, 5, 6, both plots have the same average
+estimate; however, at the mu equal to 1, 2, 3, the average estimate for
+rejecting null hypothesis samples is slightly higher than the average
+estimate for all samples. This is because there is variability in sample
+estimates, and even when the null hypothesis is rejected, there can be
+some estimation error.
