--- a/p8105_hw5_jl6648.md
+++ b/p8105_hw5_jl6648.md
@@ -6,6 +6,8 @@ Jixin Li
 ``` r
 library(tidyverse)
 library(patchwork)
+library(p8105.datasets)
+library(viridis)
 
 knitr::opts_chunk$set(
   fig.width = 6,
@@ -25,6 +27,106 @@ scale_fill_discrete = scale_fill_viridis_d
 ```
 
 # problem 1
+
+For this problem, we are interested in data gathered and made public by
+*The Washington Post* on homicides in 50 large U.S. cities. The code
+chunk below imports and cleans the data.
+
+``` r
+homicide_df = 
+  read_csv("homicide-data.csv", na = c("", "NA", "Unknown")) %>%
+  mutate(
+    city_state = str_c(city, state, sep = ", "),
+    resolution = case_when(
+      disposition == "Closed without arrest" ~ "unsolved",
+      disposition == "Open/No arrest"        ~ "unsolved",
+      disposition == "Closed by arrest"      ~ "solved"
+    )
+  ) %>% 
+  filter(city_state != "Tulsa, AL") 
+```
+
+    ## Rows: 52179 Columns: 12
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (8): uid, victim_last, victim_first, victim_race, victim_sex, city, stat...
+    ## dbl (4): reported_date, victim_age, lat, lon
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+The resulting dataframe has 52178 entries, on variables that include the
+victim name, race, age, and sex; the date the homicide was reported; and
+the location of the homicide. In cleaning, I created a `city_state`
+variable that includes both city and state, and a `resolution` variable
+to indicate whether the case was closed by arrest. I also excluded one
+entry in Tulsa, AL, which is not a major US city and is most likely a
+data entry error.
+
+In the next code chunk, I group within cities and summarize to produce
+the total number of homicides and the number that are solved.
+
+``` r
+city_homicide_df = 
+  homicide_df %>% 
+  select(city_state, disposition, resolution) %>% 
+  group_by(city_state) %>% 
+  summarize(
+    hom_total = n(),
+    hom_unsolved = sum(resolution == "unsolved"))
+```
+
+Focusing only on Baltimore, MD, I can use the `prop.test` and
+`broom::tidy` functions to obtain an estimate and CI of the proportion
+of unsolved homicides in that city. The table below shows those values.
+
+``` r
+bmore_test = 
+  prop.test(
+    x = filter(city_homicide_df, city_state == "Baltimore, MD") %>% pull(hom_unsolved),
+    n = filter(city_homicide_df, city_state == "Baltimore, MD") %>% pull(hom_total)) 
+
+broom::tidy(bmore_test) %>% 
+  knitr::kable(digits = 3)
+```
+
+| estimate | statistic | p.value | parameter | conf.low | conf.high | method                                               | alternative |
+|---------:|----------:|--------:|----------:|---------:|----------:|:-----------------------------------------------------|:------------|
+|    0.646 |   239.011 |       0 |         1 |    0.628 |     0.663 | 1-sample proportions test with continuity correction | two.sided   |
+
+Building on this code, I can use functions in the `purrr` package to
+obtain estimates and CIs for the proportion of unsolved homicides in
+each city in my dataset. The code below implements this analysis.
+
+``` r
+test_results = 
+  city_homicide_df %>% 
+  mutate(
+    prop_tests = map2(hom_unsolved, hom_total, \(x, y) prop.test(x = x, n = y)),
+    tidy_tests = map(prop_tests, broom::tidy)) %>% 
+  select(-prop_tests) %>% 
+  unnest(tidy_tests) %>% 
+  select(city_state, estimate, conf.low, conf.high) %>% 
+  mutate(city_state = fct_reorder(city_state, estimate))
+```
+
+Finally, I make a plot showing the estimate (and CI) of the proportion
+of unsolved homicides in each city.
+
+``` r
+test_results %>% 
+  mutate(city_state = fct_reorder(city_state, estimate)) %>% 
+  ggplot(aes(x = city_state, y = estimate)) + 
+  geom_point() + 
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high)) + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-6-1.png" width="95%" />
+
+This figure suggests a very wide range in the rate at which homicides
+are solved – Chicago is noticeably high and, given the narrowness of the
+CI, likely is the location of many homicides.
 
 # problem 2
 
@@ -65,7 +167,7 @@ study_df |>
   )
 ```
 
-<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-4-1.png" width="95%" />
+<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-9-1.png" width="95%" />
 
 the trend of observations between control and experimental group is
 different. In the control group, the observation of each subject
@@ -113,7 +215,7 @@ sim_mu_0 <- rerun(5000, sim_normal(mu = 0)) |>
 ``` r
 sim_mu = 
   tibble(
-    mu = c(1, 2, 3, 4, 5, 6)
+    mu = c(0, 1, 2, 3, 4, 5, 6)
     ) |>
   mutate(outputs = map(.x = mu, ~ rerun(5000, sim_normal(30, mu = .x))),
          estimate = map(outputs, bind_rows)) |>
@@ -152,10 +254,7 @@ sim_mu =
 
     ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
 
-    ## Warning in max(ids, na.rm = TRUE): no non-missing arguments to max; returning
-    ## -Inf
-
-<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-8-1.png" width="95%" />
+<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-13-1.png" width="95%" />
 
 As mu increase from 1 to 6, the proportion of rejection null hypothesis
 increases. There is a positive correlation between power and effect
@@ -180,10 +279,7 @@ sim_mu |>
 
     ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
 
-    ## Warning in max(ids, na.rm = TRUE): no non-missing arguments to max; returning
-    ## -Inf
-
-<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-9-1.png" width="95%" />
+<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-14-1.png" width="95%" />
 
 ## Make a plot showing the average estimate of μ̂ only in samples for which the null was rejected on the y axis and the true value of μ on the x axis.
 
@@ -205,10 +301,7 @@ sim_mu |>
 
     ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
 
-    ## Warning in max(ids, na.rm = TRUE): no non-missing arguments to max; returning
-    ## -Inf
-
-<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-10-1.png" width="95%" />
+<img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-15-1.png" width="95%" />
 
 according to these two plots, as the true value mu increase, the sample
 average of μ̂ across tests for which the null is rejected is more likely
