--- a/p8105_hw5_jl6648.md
+++ b/p8105_hw5_jl6648.md
@@ -256,7 +256,7 @@ sim_mu =
 
 <img src="p8105_hw5_jl6648_files/figure-gfm/unnamed-chunk-13-1.png" width="95%" />
 
-As mu increase from 1 to 6, the proportion of rejection null hypothesis
+As mu increase from 0 to 6, the proportion of rejection null hypothesis
 increases. There is a positive correlation between power and effect
 size.
 
@@ -307,8 +307,8 @@ according to these two plots, as the true value mu increase, the sample
 average of μ̂ across tests for which the null is rejected is more likely
 to equal to the average estimate for true value of μ. From the plots, we
 can tell at the mu equal to 4, 5, 6, both plots have the same average
-estimate; however, at the mu equal to 1, 2, 3, the average estimate for
-rejecting null hypothesis samples is slightly higher than the average
-estimate for all samples. This is because there is variability in sample
-estimates, and even when the null hypothesis is rejected, there can be
-some estimation error.
+estimate; however, at the mu equal to 0, 1, 2, 3, the average estimate
+for rejecting null hypothesis samples is slightly higher than the
+average estimate for all samples. This is because there is variability
+in sample estimates, and even when the null hypothesis is rejected,
+there can be some estimation error.
